--- a/docker/everest-docker-image/docker-compose.yml
+++ b/docker/everest-docker-image/docker-compose.yml
@@ -1,12 +1,10 @@
-version: "3.6"
-
 services:
   mqtt-server:
     image: eclipse-mosquitto:2.0.18
     ports:
       - 1883:1883
     volumes:
-      - ../mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ../mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf:z
   nodered:
     build:
       context: ./nodered
